# treeson

./: .gitignore  .tags  README.md  pyproject.toml  test.json
tests/: test_cli.py
treeson/: __init__.py  cli.py  core.py
